rename auth api to user api
