# internal/api/user/get.go
@@ -5,7 +5,7 @@ import (
 	"log"
 
 	"github.com/s0vunia/auth_microservice/internal/converter"
-	desc "github.com/s0vunia/auth_microservice/pkg/auth_v1"
+	desc "github.com/s0vunia/auth_microservice/pkg/user_v1"
 )
 
 // Get gets a user.
