# internal/api/user/service.go
@@ -2,12 +2,12 @@ package user
 
 import (
 	"github.com/s0vunia/auth_microservice/internal/service"
-	desc "github.com/s0vunia/auth_microservice/pkg/auth_v1"
+	desc "github.com/s0vunia/auth_microservice/pkg/user_v1"
 )
 
 // Implementation represents a user API implementation.
 type Implementation struct {
-	desc.UnimplementedAuthV1Server
+	desc.UnimplementedUserV1Server
 	userService service.UserService
 }
 
