# internal/api/user/update.go
@@ -4,7 +4,7 @@ import (
 	"context"
 
 	"github.com/s0vunia/auth_microservice/internal/converter"
-	desc "github.com/s0vunia/auth_microservice/pkg/auth_v1"
+	desc "github.com/s0vunia/auth_microservice/pkg/user_v1"
 	"google.golang.org/protobuf/types/known/emptypb"
 )
 
